Closed Bug 238958 Opened 22 years ago Closed 22 years ago

align(16) missing in jidctint.c; it should be inside the __declspec like all of the other tables

Categories

(Core :: Graphics: ImageLib, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mmoy, Assigned: tor)

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7b) Gecko/20040327 Firefox/0.8.0+ (mmoy-O2-GL7-SSE2-crc32-quek0123-Zp16) Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7b) Gecko/20040327 Firefox/0.8.0+ (mmoy-O2-GL7-SSE2-crc32-quek0123-Zp16) /* Table for rows 0,4 - constants are multiplied on cos_4_16 */ __declspec() short tab_i_04[] = { 16384, 21407, 16384, 8867, -16384, 21407, 16384, -8867, 16384, -8867, 16384, -21407, 16384, 8867, -16384, -21407, 22725, 19266, 19266, -4520, 4520, 19266, 19266, -22725, 12873, -22725, 4520, -12873, 12873, 4520, -22725, -12873}; /* Table for rows 1,7 - constants are multiplied on cos_1_16 */ __declspec(align(16)) short tab_i_17[] = { 22725, 29692, 22725, 12299, -22725, 29692, 22725, -12299, 22725, -12299, 22725, -29692, 22725, 12299, -22725, -29692, 31521, 26722, 26722, -6270, 6270, 26722, 26722, -31521, 17855, -31521, 6270, -17855, 17855, 6270, -31521, -17855}; Reproducible: Always Steps to Reproduce: 1. 2. 3. This can cause crashes rendering JPEG images on builds from time to time. This problem happens consistently when building Mozilla with GL G7 O2 SSE2 optimization. I just saw it for the first time building FireFox today. I've patched my local copy and am rebuilding FireFox now. I got around the problem on Mozilla by building the JPEG library without optimization, saving it off to the side and then copying it back into the appropriate directories before the link of Mozilla. The crash is on a movdqa on that table.
Assignee: firefox → jdunn
Component: General → ImageLib
Product: Firefox → Browser
Version: unspecified → Trunk
Attached patch add alignmentSplinter Review
Assignee: jdunn → tor
Status: UNCONFIRMED → ASSIGNED
Attachment #145126 - Flags: review?(pavlov)
I can confirm that the fix works in my builds. Another builder ran into the same problem and asked about the fix on Sunday. I don't know if the fix worked for him but I didn't see any further comments to the contrary.
Attachment #145126 - Flags: review?(pavlov) → review+
Flags: blocking1.7?
Attachment #145126 - Flags: superreview?(bryner)
I am the other builder who experienced this bug. I can also confirm that this fix worked in my builds.
Attachment #145126 - Flags: superreview?(bryner) → superreview+
Attachment #145126 - Flags: approval1.7?
Comment on attachment 145126 [details] [diff] [review] add alignment a=chofmann for 1.7
Attachment #145126 - Flags: approval1.7? → approval1.7+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Flags: blocking1.7?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: