Bug 238958 - missing align(16).  r=pavlov, sr=bryner, a=chofmann